all(update):correction version mobile

--- a/petite_resolution.css
+++ b/petite_resolution.css
@@ -32,16 +32,13 @@ body{
 } */
 
 #sign-out{
+    margin-top: 10px;
     width: 100px;
     font-size: 20px;
     font-weight: bold;
     text-decoration: none;
     display: block;
     float: right;
-}
-
-#sign-out:hover{
-    background:none;
 }
 
 
@@ -74,6 +71,10 @@ body{
     border-top: solid 4px transparent;
     border-bottom: solid 4px #0065FC;
     transition: border-bottom .5s ease;
+}
+
+#finder-search-filter-bloc, #accomodation-bloc, #activities{
+    margin: 0;
 }
 
 #finder-bloc{
@@ -163,6 +164,7 @@ body{
 }
 
 #acc-bloc-right{
+    height: auto;
     padding:55px 20px 35px 20px;
     margin: 0;
     border-radius: 0;
@@ -175,7 +177,7 @@ body{
 
 .art-acc-right{
     width: 100%;
-    margin: 0 0 10px 0;
+    margin: 0 0 15px 0;
     border-radius: 20px;
 }
 
@@ -197,20 +199,23 @@ body{
 }
 
 .art-acc-left{
-    margin: 0 0 10px 0;
+    margin: 0 0 15px 0;
     width: 100%;
     height: 100%;
 }
 
 .miniature {
-    height: 150px;
+    /* height: 150px; */
 
 }
 .art-acc-left:hover{
     transform: none;
 }
 
-#acc-bloc-left a {
+#display-more{
+    margin: 0;
+}
+#display-more a {
     margin: 20px 0 0 0;
     padding: 0;
 }
@@ -218,7 +223,7 @@ body{
 /* Section activités  */
 
 #container-articles-activities{
-    padding: 0 20px 0 20px;
+    padding: 0 50px 0 20px;
 }
 
 #activities-title h3{
@@ -254,15 +259,24 @@ body{
 }
 
 .miniature-verticale{
-    height: 200px;
-    width: 100%;
     object-fit: cover;
     border-radius: 20px 20px 0 0;
+    max-height: 115px;
+    width: 100%;
 }
 
 .miniature-horizontale-md{
-    height: 200px;
     object-fit: cover;
+    border-radius: 20px 20px 0 0;
+    max-height: 115px;
+    width: 100%;
+}
+
+.miniature-horizontale-lg{
+    object-fit: cover;
+    border-radius: 20px 20px 0 0;
+    max-height: 115px;
+    width: 100%;
 }
 
 .articles footer{
@@ -274,7 +288,7 @@ body{
 #container-footer{
     display: flex;
     flex-direction: column;
-    padding: 55px 0 50px 20px;
+    padding: 50px 0 50px 20px;
 }
 
 #container-footer strong{
@@ -286,7 +300,7 @@ body{
 }
 
 .column-footer{
-    margin: 0 20px 0 0;
+    margin: 0 20px 40px 0;
     padding-left: 10px;
 }
 
